[package]
name = "nova_portal_gen"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Static mod-portal generator: scans webmods/, validates each mod, and emits catalog.json + hashed, versioned file copies for the GitHub Pages site. Engine-free (no bevy) so the deploy job builds it in seconds."

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
nova_mod_format = { path = "../nova_mod_format" }
ron = { version = "0.12" }
serde_json = { version = "1" }
sha2 = { version = "0.10" }

[dev-dependencies]
tempfile = { version = "3" }

[lints]
workspace = true
