[package]
name = "nova_probe"
# `cargo run -p nova_probe -- ...` is the harness front door (the probe bin);
# the other bins stay directly addressable via --bin.
default-run = "probe"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Run-harness for the Nova Protocol game: frame-time capture and perf reporting over autopilot runs (dev tools)"

[lib]
path = "src/lib.rs"

# The web/native frame-time capture binary. Lives here (not in the root package)
# so the root has a single bin and `cargo run` needs no `--bin`. Trunk builds it
# for wasm via perf.html; it runs natively too.
[[bin]]
name = "perf_web"
path = "src/bin/perf_web.rs"




# The front door: `probe run <example>` orchestrates the passes and the
# report; sweep/web/profile wrap the perf scripts.
[[bin]]
name = "probe"
path = "src/bin/probe.rs"

[dependencies]
# The invariant checks read avian's LinearVelocity directly (same pinned
# version the whole workspace resolves).
avian3d = { version = "0.7" }
bevy = { version = "0.19.0" }
# The capture plugin reads GameStates / WeaponsHot / PlayerSpaceshipMarker and
# tops up Health (re-exported by nova_gameplay, so the bcs version stays unified).
nova_gameplay = { path = "../nova_gameplay" }
# The run-timeline recorder observes the scenario's GameEvent stream (bcs
# re-exported through nova_gameplay) and snapshot-diffs NovaEventWorld's
# variables; nova_events carries the typed event vocabulary in its docs.
nova_scenario = { path = "../nova_scenario" }
# Timeline entries carry the events' serde_json payloads (GameEventInfo::data),
# so the JSONL sink serializes with serde_json rather than hand-rolling.
serde_json = { version = "1" }
# The `perf_web` bin builds the real game app; it needs the full stack, but not
# the debug overlays (the harness is not debug-gated now that it lives here).
nova-protocol = { path = "../.." }

# Wasm-only: the harness reads its config from the URL query string in the
# browser (no process env there).
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }

[lints]
workspace = true
