[package]
name = "nova_scenario"
version = { workspace = true }
edition = { workspace = true }
description = "Scenario loader and logic for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.7" }
bevy = { version = "0.19.0" }
bevy_enhanced_input = { version = "0.26.0" }
rand = { version = "0.10.2" }
noise = { version = "0.9" }
bevy_common_systems = { git = "https://github.com/alexjercan/bevy-common-systems", rev = "4a743b2a91ac270cc689eb43c5ecc26c6b2f0897" }
bevy_rand = { version = "0.15.0", default-features = false, features = ["chacha20", "wyrand"] }
nova_events = { path = "../nova_events" }
nova_gameplay = { path = "../nova_gameplay" }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.15.0", features = ["wasm_js"] }

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "bevy_common_systems/debug"]
