[package]
name = "nova_scenario"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Scenario loader and logic for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.7" }
bevy = { version = "0.19.0" }
bevy_enhanced_input = { version = "0.26.0" }
rand = { version = "0.10.2" }
noise = { version = "0.9" }
bevy_common_systems = { git = "https://github.com/alexjercan/bevy-common-systems", tag = "v0.19.1" }
bevy_rand = { version = "0.15.0", default-features = false, features = ["chacha20", "wyrand"] }
nova_events = { path = "../nova_events" }
nova_gameplay = { path = "../nova_gameplay" }
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.15.0", features = ["wasm_js"] }

[dev-dependencies]
ron = { version = "0.12" }
criterion = { version = "0.7", features = ["html_reports"] }
serde_json = { version = "1" }

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "bevy_common_systems/debug"]
serde = ["dep:serde", "bevy/serialize", "nova_gameplay/serde"]

# Baseline + regression benchmark for the scenario dispatch hot path (task
# 20260714-083331): synthetic many-handler scenario, filter/condition micro
# groups, and the full event-dispatch loop. `cargo bench -p nova_scenario`.
[[bench]]
name = "scenario_dispatch"
harness = false
