[package]
name = "nova_scenario"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Scenario loader and logic for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.7" }
bevy = { version = "0.19.0" }
bevy_enhanced_input = { version = "0.26.0" }
rand = { version = "0.10.2" }
noise = { version = "0.9" }
bevy_common_systems = { git = "https://github.com/alexjercan/bevy-common-systems", tag = "v0.19.5" }
bevy_rand = { version = "0.15.0", default-features = false, features = ["chacha20", "wyrand"] }
nova_events = { path = "../nova_events" }
nova_gameplay = { path = "../nova_gameplay" }
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.15.0", features = ["wasm_js"] }

[dev-dependencies]
ron = { version = "0.12" }
criterion = { version = "0.7", features = ["html_reports"] }
serde_json = { version = "1" }
# Self dev-dep enabling `serde` so `cargo test -p nova_scenario` compiles
# standalone. The loader RON round-trip tests use serde derives that are gated
# behind the `serde` feature; a solo `-p` run has no sibling to unify the
# feature in, so without this the lib-test target fails to compile (missing
# Serialize/Deserialize on ScenarioConfig). Dev-dependencies unify into the
# test build, forcing the feature ON for `cargo test` with no extra flags.
# Not `required-features` on the test targets - that would SKIP the tests when
# the feature is off, silently running nothing (task 20260721-000249).
nova_scenario = { path = ".", features = ["serde"] }

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "bevy_common_systems/debug"]
serde = ["dep:serde", "bevy/serialize", "nova_gameplay/serde"]

# Baseline + regression benchmark for the scenario dispatch hot path (task
# 20260714-083331): synthetic many-handler scenario, filter/condition micro
# groups, and the full event-dispatch loop. `cargo bench -p nova_scenario`.
[[bench]]
name = "scenario_dispatch"
harness = false
