[package]
name = "nova_ui"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
description = "Shared UI theme and widgets for the Nova Protocol game"

[dependencies]
bevy = { version = "0.19.0" }

[lints]
workspace = true

[features]
debug = []
